--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,13 @@
 events { }
 
+# Note von ChatGPT 
+# Docker-Compose-Services haben denselben Hostnamen, egal wie viele Instanzen existieren.
+# Alle Instanzen laufen unter dem einzigen Namen app.
+# Docker kümmert sich automatisch darum, Anfragen auf verschiedene Instanzen zu verteilen.
 http {
-    upstream backend {
-        server app:3000;
-        server app_1:3000;
-        server app_2:3000;
-    }
+upstream backend {
+    server app:3000;
+}
 
     server {
         listen 80;
